<resources>
    <string name="app_name">Beepos Mobile</string>
    <string name="version">version</string>
    <string name="api_key">api_key</string>
    <string name="trx_ordernum">trx_ordernum</string>
    <string name="is_first_run">is_first_run</string>
    <string name="pref_screen_orientation" translatable="false">Screen Orientation</string>
    <string name="pref_is_change_screen_orientation" translatable="false">Is Change Orientation</string>
    <string name="pref_nama_device">pref_nama_device</string>
    <string name="pref_mode_tampilan">pref_mode_tampilan</string>
    <string name="pref_last_page">pref_last_page</string>
    <string name="pref_tes_String">pref_tes</string>
    <string name="pref_info_kontak_lanjut">pref_lanjut</string>
    <string name="pref_regid">str_regid</string>
    <string name="pref_serial_number">serial_number</string>
    <string name="pref_auth_key">auth_key</string>
    <string name="pref_wa">str_wa</string>
    <string name="pref_value_selected">pref_value_selected</string>
    <string name="pref_switch_dapur">pref_switch_dapur</string>
    <string name="pref_ukuran_font">pref_ukuran_font</string>
    <string name="pref_multi_line">pref_multi_line</string>
    <string name="pref_konfirmasi_customer">pref_konfirmasi_customer</string>
    <string name="pref_customer">pref_customer</string>
    <string name="pref_jumlah_meja">pref_jumlah_meja</string>
    <string name="pref_preset_buka_kasir">pref_preset_buka_kasir</string>
    <string name="pref_gambar_produk">pref_gambar_produk</string>
    <string name="pref_is_sign_up">pref_is_sign_up</string>
    <string name="pref_email">pref_email</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_rekap_per_channel">pref_rekap_per_channel</string>
    <string name="pref_rekap_per_produk_perchannel">pref_rekap_per_produk_perchannel</string>
    <string name="pref_rekap_per_faktur">pref_rekap_per_faktur</string>
    <string name="pref_rekap_per_customer">pref_rekap_per_customer</string>
    <string name="pref_sistem_penyimpanan">pref_sistem_penyimpanan</string>
    <string name="pref_batch_upload">pref_batch_upload</string>
    <string name="pref_periode_upload_otomatis">pref_periode_upload_otomatis</string>
    <string name="pref_cloud_data_dapur">pref_cloud_data_dapur</string>
    <string name="pref_logo">pref_logo</string>
    <string name="pref_logo_galeri">pref_logo_galeri</string>
    <string name="pref_header">pref_header</string>
    <string name="pref_footer">pref_footer</string>
    <string name="pref_isi_header">pref_isi_header</string>
    <string name="pref_isi_footer">pref_isi_footer</string>
    <string name="pref_tipe_printer">pref_tipe_printer</string>
    <string name="pref_name_printer">pref_name_printer</string>
    <string name="pref_address_printer">pref_address_printer</string>
    <string name="pref_sistem_datakitchen">pref_sistem_datakitchen</string>
    <string name="pref_is_scan">pref_is_scan</string>
    <string name="pref_rkp_customer">pref_rkp_customer</string>
    <string name="pref_rkp_produk_channel">pref_rkp_produk_channel</string>
    <string name="pref_rkp_faktur">pref_rkp_faktur</string>
    <string name="pref_rkp_channel">pref_rkp_channel</string>
    <string name="pref_city">pref_city</string>
    <string name="pref_is_city">pref_is_city</string>
    <string name="pref_add_member_name">pref_add_member_name</string>
    <string name="pref_add_member_notelp">pref_add_member_notelp</string>
    <string name="pref_add_member_email">pref_add_member_email</string>
    <string name="pref_add_member_alamat">pref_add_member_alamat</string>
    <string name="pref_counter_sesi">pref_counter_sesi</string>
    <string name="pref_pilih_tgl">pref_pilih_tgl</string>
    <string name="pref_login_user">login_user</string>
    <string name="pref_tablayout">pref_tablayout</string>
    <string name="pref_user_kasir">pref_user_kasir</string>
    <string name="pref_add_nama_prd">pref_add_nama_prd</string>
    <string name="pref_add_harga_prd">pref_add_harga_prd</string>
    <string name="pref_add_tipe_prd">pref_add_tipe_prd</string>
    <string name="pref_add_list_unit">pref_add_list_unit</string>
    <string name="pref_add_pid">pref_add_pid</string>
    <string name="pref_isKasmasuk">pref_isKasmasuk</string>
    <string name="pref_default_kategori">pref_default_kategori</string>
    <string name="pref_default_merk">pref_default_merk</string>
    <string name="page_pilih_cabang">page_pilih_cabang</string>
    <string name="page_pilih_kasir">page_pilih_kasir</string>
    <string name="page_atur_pin">page_atur_pin</string>
    <string name="page_otp">page_otp</string>
    <string name="page_atur_produk">page_atur_produk</string>
    <string name="page_cek_db">page_cek_db</string>
    <string name="page_pilih_operator">page_login_operator</string>
    <string name="page_home">page_home</string>
    <string name="page_login">page_login</string>
    <string name="page_kas_masuk">page_kas_masuk</string>
    <string name="page_kas_keluar">page_kas_keluar</string>
    <string-array name="list_ukuran_font">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="list_customer">
        <item>@string/nama</item>
        <item>@string/no_meja</item>
    </string-array>
    <string-array name="list_orientation">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="list_preset_buka_kasir">
        <item>0</item>
        <item>100000</item>
        <item>200000</item>
        <item>250000</item>
        <item>500000</item>
        <item>1000000</item>
    </string-array>
    <string-array name="list_jumlah_meja">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="list_sistem_penyimpanan">
        <item>7 Hari</item>
        <item>15 Hari</item>
        <item>30 Hari</item>
    </string-array>
    <string-array name="list_sistem_batch_upload">
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string-array name="list_periode_upload_otomatis">
        <item>15 Menit</item>
        <item>30 Menit</item>
        <item>60 Menit</item>
    </string-array>
    <string-array name="list_ukuran_kertas">
        <item>58 mm</item>
        <item>60 mm</item>
    </string-array>
    <string-array name="list_pilih_tgl">
        <item>1 Minggu Terakhir</item>
        <item>1 Bulan Terakhir</item>
        <item>90 Hari Terakhir</item>
        <item>Custom</item>
    </string-array>
    <string-array name="list_itgrp">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Snack</item>
        <item>Dessert</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="list_tipe_produk">
        <item>-</item>
        <item>GOOD</item>
        <item>SERV</item>
    </string-array>
    <string-array name="list_satuan">
        <item>PCS</item>
        <item>PORSI</item>
        <item>DOS</item>
        <item>BUAH</item>
    </string-array>
    <string name="desc_cloud_data_dapur">Fitur ini digunakan untuk memilih sumber data dapur.Aktifkan fitur ini jika anda ingin mengambil data dapur dari Beecloud. Jika tidak aktif, sistem akan mengambil data dari lokal</string>
    <string name="untuk_penjelasan">Untuk penjelasan lebih, cek video kami, ya~</string>
    <string name="mohon_tunggu_sebentar">Mohon Tunggu Sebentar..</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="daftar">DAFTAR</string>
    <string name="atau">Atau</string>
    <string name="database">Database</string>
    <string name="mohon_tunggu">Mohon Tunggu</string>
    <string name="masukkan_email_password_masuk">Masukkan email &amp; password masuk</string>
    <string name="cth_budi_email_com">Cth. budi@email.com</string>
    <string name="masuk">Masuk</string>
    <string name="tentukan_nama_device">Tentukan Nama Device</string>
    <string name="sebagai_identitas_device_yang_digunakan">Sebagai identitas device yang digunakan</string>
    <string name="nama_device">Nama Device</string>
    <string name="cth_smartphone_1">Cth. Smartphone 1</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eu felis nec orci tincidunt lobortis ut non mi. Suspendisse dolor orci, viverra a odio sed, mollis finibus dolor. Nunc in augue fringilla, consectetur dolor a, feugiat arcu. Sed vel leo sem. In et imperdiet quam, ut mollis libero. Etiam faucibus felis urna, ut porta purus auctor ac.</string>
    <string name="informasi">Informasi</string>
    <string name="konfirmasi_keluar">Anda belum menyelesaikan proses login dan perubahan belum disimpan</string>
    <string name="yakin_akan_keluar">Yakin ingin keluar?</string>
    <string name="pilih_database">Pilih Database</string>
    <string name="pilih_database_untuk_melakukan_transaksi">Pilih database untuk melakukan transaksi</string>
    <string name="pilih_cabang">Pilih Cabang</string>
    <string name="pilih_cabang_untuk_melakukan_transaksi">Pilih cabang untuk melakukan transaksi</string>
    <string name="kasir_yang_tersedia">Kasir yang tersedia</string>
    <string name="tersedia">Tersedia</string>
    <string name="login_operator">Login Operator</string>
    <string name="masukkan_pin_untuk_melanjutkan">Masukkan PIN untuk melanjutkan</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="tentang_pajak">Tentang Pajak</string>
    <string name="info_pajak">Harga produk yang tercantum belum termasuk pajak. Contoh: Jika harga / Dpp produk 100,000 + pajak 10,000, maka total harga menjadi 110,000</string>
    <string name="harga_termasuk_pajak">Harga Termasuk Pajak</string>
    <string name="info_harga_termasuk_pajak">Harga produk yang tercantum sudah termasuk pajak. Contoh: Jika harga produk sebesar 100,000, maka Dpp 90,000 + pajak 10,000</string>
    <string name="tutup">Tutup</string>
    <string name="perusahaan">Nama Perusahaan</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="pos">POS</string>
    <string name="member">Member :</string>
    <string name="search">Search</string>
    <string name="batal">Batal</string>
    <string name="diskon">Diskon</string>
    <string name="pajak">Pajak</string>
    <string name="rp">Rp.</string>
    <string name="beranda">Beranda</string>
    <string name="analisa">Analisa</string>
    <string name="transaksi">Transaksi</string>
    <string name="buka_kasir">Buka Kasir</string>
    <string name="user_kasir">User Kasir</string>
    <string name="modal_kasir">Modal Kasir</string>
    <string name="atur_modal_kasir">Atur Modal Kasir</string>
    <string name="sebelum_buka_kasir_atur_modal_dulu_ya">Sebelum buka kasir, atur modal dulu ya!</string>
    <string name="lainnya">Lainnya</string>
    <string name="diskon_nota">Diskon Nota</string>
    <string name="daftar_promo">Daftar Promo</string>
    <string name="hint_diskon_nota">Cth. 10% atau 10.000 atau 10% + 10.000</string>
    <string name="untuk_diskon_kombinasi_gunakan_tanda_diantara_diskon_1_dan_diskon_2">Untuk diskon kombinasi, gunakan tanda + diantara diskon 1 dan diskon 2</string>
    <string name="sesi">Sesi</string>
    <string name="bagaimana_caranya_agar_saya_bisa_mengubah_modal_kasir_pelajari_selengkapnya_disini">Bagaimana caranya agar saya bisa mengubah modal kasir? </string>
    <string name="terapkan">Terapkan</string>
</resources>