<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:title="@string/member"
        android:id="@+id/menu_draft"
        android:icon="@drawable/ic_people"
        app:showAsAction="always"/>

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_more"
        android:id="@+id/menu_lainnya"
        android:title="@string/lainnya">
        <menu>
            <item android:icon="@drawable/ic_diskon_master"
                android:id="@+id/menu_diskon"
                app:showAsAction="withText"
                android:title="@string/diskon_nota" />

            <item android:icon="@drawable/ic_promo"
                android:id="@+id/menu_promo"
                app:showAsAction="withText"
                android:title="@string/daftar_promo" />
        </menu>

    </item>

</menu>