<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size18"
    android:background="@drawable/bg_rounded_top_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView10"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentang_pajak"
        android:textSize="@dimen/font16"
        app:layout_constraintBottom_toBottomOf="@+id/imag_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:padding="@dimen/size8"
        android:id="@+id/imag_close"
        android:layout_width="@dimen/size36"
        android:layout_height="@dimen/size36"
        android:src="@drawable/ic_close_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextHeader"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:text="@string/pajak"
        android:textSize="@dimen/font14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size4"
        android:text="@string/info_pajak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        style="@style/TextHeader"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:text="@string/harga_termasuk_pajak"
        android:textSize="@dimen/font14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size6"
        android:text="@string/info_harga_termasuk_pajak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/btn_close"
        android:layout_marginTop="@dimen/size24"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rect_primary"
        android:text="@string/tutup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />


</androidx.constraintlayout.widget.ConstraintLayout>