<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/size16"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskon_nota"
        android:textSize="@dimen/font16"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:padding="@dimen/size8"
        android:id="@+id/imageView2"
        android:layout_width="@dimen/size36"
        android:layout_height="@dimen/size36"
        android:src="@drawable/ic_close_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView76"
        android:layout_marginTop="@dimen/size16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/diskon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etDiskon"
        android:layout_width="@dimen/size0"
        android:layout_marginTop="@dimen/size8"
        android:hint="@string/hint_diskon_nota"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:digits="0123456789+%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView98"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size8"
        android:text="@string/untuk_diskon_kombinasi_gunakan_tanda_diantara_diskon_1_dan_diskon_2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDiskon" />

    <Button
        android:id="@+id/btnBatal"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size8"
        android:layout_marginTop="@dimen/size16"
        android:background="@drawable/btn_rect_secondary"
        android:text="@string/batal"
        android:textColor="?colorPrimary"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTambah"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView98" />

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:text="@string/terapkan"
        android:background="@drawable/btn_rect_primary"
        android:layout_marginStart="@dimen/size8"
        app:layout_constraintBottom_toBottomOf="@+id/btnBatal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBatal"
        app:layout_constraintTop_toTopOf="@+id/btnBatal" />

</androidx.constraintlayout.widget.ConstraintLayout>