<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size16"
    android:background="@drawable/bg_rounded_top_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atur_modal_kasir"
        android:textSize="@dimen/font16"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:padding="@dimen/size8"
        android:id="@+id/imageView2"
        android:layout_width="@dimen/size32"
        android:layout_height="@dimen/size32"
        android:src="@drawable/ic_close_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:text="@string/sebelum_buka_kasir_atur_modal_dulu_ya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/textView72"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modal_kasir"
        android:layout_marginTop="@dimen/size16"
        app:layout_constraintStart_toStartOf="@+id/textView71"
        app:layout_constraintTop_toBottomOf="@+id/textView71" />

    <TextView
        android:id="@+id/tvMataUang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp"
        app:layout_constraintBottom_toBottomOf="@+id/etModal"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toTopOf="@+id/etModal" />

    <EditText
        android:id="@+id/etModal"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size8"
        android:inputType="phone"
        android:layout_marginStart="@dimen/size16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMataUang"
        app:layout_constraintTop_toBottomOf="@+id/textView72" />

    <LinearLayout
        android:background="@drawable/bg_rect_light_gray"
        android:padding="@dimen/size12"
        android:id="@+id/llInfo"
        android:layout_marginTop="@dimen/size16"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etModal">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bagaimana_caranya_agar_saya_bisa_mengubah_modal_kasir_pelajari_selengkapnya_disini" />

    </LinearLayout>


    <Button
        android:id="@+id/btnBukaKasir"
        android:layout_width="@dimen/size0"
        android:layout_marginTop="@dimen/size16"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rect_primary"
        android:text="@string/buka_kasir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>